src/objects/Media_Vendor__c.object
<CustomObject>
    <description>This is an object that houses all of the media vendors we currently have</description>
    <fields>
        <fullName>Agency_Naming_Convention__c</fullName>
        <label>Agency Naming Convention</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DMA</label>
        <referenceTo>DMA__c</referenceTo>
        <relationshipLabel>Media Vendors</relationshipLabel>
        <relationshipName>Media_Vendors</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Station_Affliliate__c</fullName>
        <label>Station Affliliate</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ABC</fullName>
                </value>
                <value>
                    <fullName>CBS</fullName>
                </value>
                <value>
                    <fullName>CW</fullName>
                </value>
                <value>
                    <fullName>FOX</fullName>
                </value>
                <value>
                    <fullName>Independent</fullName>
                </value>
                <value>
                    <fullName>MyTV</fullName>
                </value>
                <value>
                    <fullName>NBC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Media Vendor</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Agency_Naming_Convention__c</columns>
        <columns>NAME</columns>
        <columns>Station_Affliliate__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Media Vendors Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Media Vendors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>